[package]
name = "pngenc"
version = "0.1.0"
edition = "2021"
description = "portable network graphics (PNG) encoding"
authors = ["bend-n <bend.n@outlook.com>"]
license = "MIT"
repository = "https://github.com/bend-n/pngenc"
exclude = [".gitignore", "benches"]
keywords = ["image", "format", "encoding"]
categories = ["multimedia::images", "graphics", "encoding"]

[dependencies]
atools = "0.1.1"
crc32fast = { version = "1.4", features = ["nightly"] }
simd-adler32 = "0.3.7"

[dev-dependencies]
png = "0.17"

[profile.release]
debug = 2
opt-level = 3
lto = "thin"
incremental = true
